tests/ui/stream_bodies_return_unit.stderr
error[E0308]: mismatched types
 --> tests/ui/stream_bodies_return_unit.rs:7:36
  |
6 | /     join!(
7 | |         _ in stream::iter([42]) => 99,
  | |                                    ^^ expected `()`, found integer
8 | |     );
  | |_____- expected due to this
